Moved injected service to razor file from CS file.

--- a/Blazorade.Teams.Components/_Imports.razor
+++ b/Blazorade.Teams.Components/_Imports.razor
@@ -2,3 +2,5 @@
 @using Blazorade.Core.Components
 @using Blazorade.Core.Components.Builder
 @using Blazorade.Core.Components.Server
+@using Blazorade.Teams.Components
+@using Blazorade.Teams.Components.Interop 
