First version of MSAL authentication working.

--- a/Blazorade.Teams.Components/TeamsApplication.razor
+++ b/Blazorade.Teams.Components/TeamsApplication.razor
@@ -1,4 +1,11 @@
 ﻿@inherits BlazoradeComponentBase
 @inject BlazoradeTeamsInteropModule TeamsInterop
 
-@this.ChildContent
+@if (this.ShowApplicationTemplate)
+{
+    @this.ApplicationTemplate(this.ApplicationContext)
+}
+else
+{
+    @this.ChildContent
+}
