Renamed Blazorade.Teams.Components to Blazorade.Teams, and implemented a test server app with a personal tab application using Blazorade Teams.

--- a/Blazorade.Teams/_Imports.razor
+++ b/Blazorade.Teams/_Imports.razor
@@ -3,4 +3,4 @@
 @using Blazorade.Core.Components.Builder
 @using Blazorade.Core.Components.Server
 @using Blazorade.Teams.Components
-@using Blazorade.Teams.Components.Interop 
+@using Blazorade.Teams.Interop 
