--- a/TeamsTabAppServer/_Imports.razor
+++ b/TeamsTabAppServer/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using TeamsTabAppServer
 @using TeamsTabAppServer.Shared
+@using Blazorade.Core.Components
+@using Blazorade.Core.Components.Builder
+@using Blazorade.Core.Components.Server
+@using Blazorade.Teams
+@using Blazorade.Teams.Components
+@using Blazorade.Teams.Configuration
+@using Blazorade.Teams.Interop
+@using Blazorade.Teams.Model
