Tab configuration now works, at least for creating new tabs. Still need to make sure that editing existing tabs is working as it should.

--- a/Blazorade.Teams/Components/TeamsApplication.razor
+++ b/Blazorade.Teams/Components/TeamsApplication.razor
@@ -9,7 +9,7 @@ else if (this.ShowHostNotAvailableTemplate && null != this.HostNotAvailableTempl
 {
     @this.HostNotAvailableTemplate
 }
-else
+else if(null != this.LoadingTemplate)
 {
-    @this.ChildContent
+    @this.LoadingTemplate(this.ApplicationContext)
 }
