--- a/TeamsTabAppServer/Pages/Personal.razor
+++ b/TeamsTabAppServer/Pages/Personal.razor
@@ -9,7 +9,7 @@
             This application is designed to be run inside of Microsoft Teams.
         </p>
     </HostNotAvailableTemplate>
-    <ChildContent>
+    <LoadingTemplate>
         Loading...
-    </ChildContent>
+    </LoadingTemplate>
 </TeamsApplication>
