--- a/TeamsTabAppServer/Pages/_Host.cshtml
+++ b/TeamsTabAppServer/Pages/_Host.cshtml
@@ -13,8 +13,9 @@
     <title>TeamsTabAppServer</title>
     <base href="~/" />
     <link href="TeamsTabAppServer.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
 </head>
-<body>
+<body class="ms-Fabric">
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <script src="_framework/blazor.server.js"></script>
