Simplified the sample code.

--- a/TeamsTabAppServer/Pages/TabApp.razor
+++ b/TeamsTabAppServer/Pages/TabApp.razor
@@ -1,7 +1,10 @@
-﻿@page "/tabapp"
+﻿@page "/TabApp"
 
 <TeamsApplication RequireAuthentication="true">
     <ApplicationTemplate>
         <TeamsContextView Context="context" />
     </ApplicationTemplate>
+    <LoadingTemplate>
+        Loading. Hang on...
+    </LoadingTemplate>
 </TeamsApplication>
