--- a/TeamsTabAppServer/Pages/TabAppRemove.razor
+++ b/TeamsTabAppServer/Pages/TabAppRemove.razor
@@ -3,7 +3,6 @@
 @code {
     ApplicationContext Context;
 
-
     [JSInvokable]
     public async Task RemovingAsync(Dictionary<string, object> data)
     {
@@ -13,24 +12,18 @@
         // removing settings or data storage, for instance.
     }
 
-    private async Task ValidityChangedAsync(ChangeEventArgs e)
-    {
-        await this.Context.TeamsInterop.Settings.RegisterOnRemoveHandlerAsync(this.RemovingAsync);
-
-        var isValid = (bool)e.Value;
-        await this.Context.TeamsInterop.Settings.SetValidityStateAsync(isValid);
-    }
 }
 <TeamsApplication RequireAuthentication="true">
     <ApplicationTemplate>
         @{
             this.Context = context;
-            this.Context.TeamsInterop.Settings.RegisterOnRemoveHandlerAsync(this.RemovingAsync);
+            this.Context.TeamsInterop.Settings
+                .RegisterOnRemoveHandlerAsync(this.RemovingAsync);
+            this.Context.TeamsInterop.Settings
+                .SetValidityStateAsync(true);
         }
-
-        <label>
-            <input type="checkbox" @onchange="this.ValidityChangedAsync" />
-            <span>You sure you want to remove your tab application?</span>
-        </label>
+        <p>
+            If you click the Remove button below, this application will be removed.
+        </p>
     </ApplicationTemplate>
 </TeamsApplication> 
