Finished the WebAssembly demo app.

--- a/TeamsTabAppClient/_Imports.razor
+++ b/TeamsTabAppClient/_Imports.razor
@@ -8,3 +8,13 @@
 @using Microsoft.JSInterop
 @using TeamsTabAppClient
 @using TeamsTabAppClient.Shared
+
+@using Blazorade.Core
+@using Blazorade.Core.Components
+@using Blazorade.Core.Components.Builder
+
+@using Blazorade.Teams
+@using Blazorade.Teams.Components
+@using Blazorade.Teams.Configuration
+@using Blazorade.Teams.Interop
+@using Blazorade.Teams.Model
