--- a/Blazorade.Teams/_Imports.razor
+++ b/Blazorade.Teams/_Imports.razor
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop; 
 @using Blazorade.Core.Components
 @using Blazorade.Core.Components.Builder
 @using Blazorade.Core.Components.Server
 @using Blazorade.Teams.Components
+@using Blazorade.Teams.Configuration 
 @using Blazorade.Teams.Interop 
