Modified Blazorade Teams to use Blazorade MSAL and the builtin authentication dialog in Teams to do interactive login if needed.

--- a/Blazorade.Teams/Components/LoginDialogHandler.razor
+++ b/Blazorade.Teams/Components/LoginDialogHandler.razor
@@ -1,5 +1,10 @@
-﻿<h3>LoginDialogHandler</h3>
+﻿@inherits BlazoradeComponentBase
 
-@code {
+@inject BlazoradeMsalService MsalService
+@inject BlazoradeTeamsInteropModule TeamsInterop
+@inject NavigationManager NavMan
 
+@if(null != this.ChildContent)
+{
+    @this.ChildContent
 }
