--- a/Samples/TeamsTabAppClient/_Imports.razor
+++ b/Samples/TeamsTabAppClient/_Imports.razor
@@ -13,6 +13,11 @@
 @using Blazorade.Core.Components
 @using Blazorade.Core.Components.Builder
 
+@using Blazorade.Msal.Components
+@using Blazorade.Msal.Configuration
+@using Blazorade.Msal.Security
+@using Blazorade.Msal.Services
+
 @using Blazorade.Teams
 @using Blazorade.Teams.Components
 @using Blazorade.Teams.Configuration
