--- a/Blazorade.Teams/Components/TeamsApplication.razor
+++ b/Blazorade.Teams/Components/TeamsApplication.razor
@@ -1,7 +1,8 @@
 ﻿@inherits BlazoradeComponentBase
 @inject BlazoradeTeamsInteropModule TeamsInterop
 @inject NavigationManager NavMan
-@inject AzureAdApplicationOptions AppOptions
+@inject BlazoradeTeamsOptions AppOptions
+@inject BlazoradeMsalService MsalService
 @inject IJSRuntime JSRuntime
 
 
