--- a/Samples/TeamsTabAppClient/Shared/ProfileViewer.razor
+++ b/Samples/TeamsTabAppClient/Shared/ProfileViewer.razor
@@ -1,4 +1,5 @@
 ﻿@inherits BlazoradeComponentBase
+@inject BlazoradeMsalService MsalService
 
 <ul>
     <li>Display Name: @this.Model.DisplayName</li>
