--- a/Samples/TeamsTabAppServer/_Imports.razor
+++ b/Samples/TeamsTabAppServer/_Imports.razor
@@ -8,9 +8,16 @@
 @using Microsoft.JSInterop
 @using TeamsTabAppServer
 @using TeamsTabAppServer.Shared
+
 @using Blazorade.Core.Components
 @using Blazorade.Core.Components.Builder
 @using Blazorade.Core.Components.Server
+
+@using Blazorade.Msal.Components
+@using Blazorade.Msal.Configuration
+@using Blazorade.Msal.Security
+@using Blazorade.Msal.Services
+
 @using Blazorade.Teams
 @using Blazorade.Teams.Components
 @using Blazorade.Teams.Configuration
