You can now acquire tokens with different scopes on an application page.

--- a/Blazorade.Teams/Components/LoginDialogHandler.razor
+++ b/Blazorade.Teams/Components/LoginDialogHandler.razor
@@ -3,6 +3,8 @@
 @inject BlazoradeMsalService MsalService
 @inject BlazoradeTeamsInteropModule TeamsInterop
 @inject NavigationManager NavMan
+@inject LocalStorageService LocalStorage
+@inject BlazoradeTeamsOptions Options
 
 @if(null != this.ChildContent)
 {
