--- a/Blazorade.Teams/_Imports.razor
+++ b/Blazorade.Teams/_Imports.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop; 
+@using Microsoft.JSInterop;
 @using Blazorade.Core.Components
 @using Blazorade.Core.Components.Builder
 @using Blazorade.Core.Components.Server
@@ -8,8 +8,9 @@
 @using Blazorade.Msal.Components
 @using Blazorade.Msal.Configuration
 @using Blazorade.Msal.Security
-@using Blazorade.Msal.Services   
+@using Blazorade.Msal.Services
 
 @using Blazorade.Teams.Components
-@using Blazorade.Teams.Configuration 
-@using Blazorade.Teams.Interop 
+@using Blazorade.Teams.Configuration
+@using Blazorade.Teams.Interop
+@using Blazorade.Teams.Interop.Internal
