--- a/Samples/TeamsTabAppServer/Pages/Personal.razor
+++ b/Samples/TeamsTabAppServer/Pages/Personal.razor
@@ -1,6 +1,6 @@
 ﻿@page "/personal"
 
-<TeamsApplication RequireAuthentication="true">
+<TeamsApplication RequireDefaultScopes="true">
     <ApplicationTemplate Context="ctx">
         <UserInfoView Context="ctx" />
     </ApplicationTemplate>
