--- a/Samples/TeamsTabAppServer/Pages/my/Calendar.razor
+++ b/Samples/TeamsTabAppServer/Pages/my/Calendar.razor
@@ -1,8 +1,8 @@
-﻿@page "/mymail"
+﻿@page "/my/calendar"
 
-<TeamsApplication RequireScopes="User.Read,Mail.Read">
+<TeamsApplication RequireScopes="User.Read,Calendars.Read">
     <ApplicationTemplate>
-        <MailView Context="context" />
+        <h2>My Calendar...</h2>
     </ApplicationTemplate>
     <LoadingTemplate>
         <p>Loading...</p>
