--- a/Samples/TeamsTabAppServer/Shared/TeamsContextView.razor
+++ b/Samples/TeamsTabAppServer/Shared/TeamsContextView.razor
@@ -8,7 +8,24 @@
     <li>Team Name: @this.Context.Context.TeamName</li>
     <li>Team Site URL: @this.Context.Context.TeamSiteUrl</li>
     <li>Group ID: @this.Context.Context.GroupId</li>
+    <li>Is Team Archived: @this.Context.Context.IsTeamArchived</li>
+    <li>Frame Context: @this.Context.Context.FrameContext</li>
+    <li>Entity ID: @this.Context.Context.EntityId</li>
+    <li>Sub-Entity ID: @this.Context.Context.SubEntityId</li>
+
     <li>Channel Name: @this.Context.Context.ChannelName</li>
     <li>Channel ID: @this.Context.Context.ChannelId</li>
+    <li>Channel Relative Url: @this.Context.Context.ChannelRelativeUrl</li>
     <li>Channel Type: @this.Context.Context.ChannelType</li>
+
+    <li>Chat ID: @this.Context.Context.ChatId</li>
+
+    <li>Default OneNote Section ID: @this.Context.Context.DefaultOneNoteSectionId</li>
+
+    <li>Host Client Type: @this.Context.Context.HostClientType</li>
+
+    <li>Is Full Screen: @this.Context.Context.IsFullScreen</li>
+    <li>Is Multi-Window: @this.Context.Context.IsMultiWindow</li>
+
+    <li>Locale: @this.Context.Context.Locale</li>
 </ul>
