Added client time zone offset. Closes #17

--- a/Blazorade.Teams/Components/TeamsApplication.razor
+++ b/Blazorade.Teams/Components/TeamsApplication.razor
@@ -3,8 +3,8 @@
 @inject NavigationManager NavMan
 @inject BlazoradeTeamsOptions AppOptions
 @inject BlazoradeMsalService MsalService
+@inject BlazoradeLocalizationService LocalizationService
 @inject IJSRuntime JSRuntime
-
 
 @if (this.ShowApplicationTemplate && null != this.ApplicationTemplate)
 {
