--- a/Samples/TeamsTabAppServer/Shared/UserInfoView.razor
+++ b/Samples/TeamsTabAppServer/Shared/UserInfoView.razor
@@ -10,4 +10,5 @@
     <li>Job Title: @this.JobTitle</li>
     <li>Mobile Phone: @this.MobilePhone</li>
     <li>E-mail: @this.Email</li>
+    <li>Client Time Zone: @this.Context.ClientTimeZoneOffset</li>
 </ul>
