--- a/Samples/TeamsTabAppServer/Pages/Index.razor
+++ b/Samples/TeamsTabAppServer/Pages/Index.razor
@@ -7,10 +7,13 @@
             <li>Login Hint: @ctx.Context.LoginHint</li>
         </ul>
     </ApplicationTemplate>
-    <HostNotAvailableTemplate>
+    <InitializationFailedTemplate>
         <p>
             Seems like you're not running this application in a Microsoft Teams context.
         </p>
-    </HostNotAvailableTemplate>
+    </InitializationFailedTemplate>
+    <LoadingTemplate>
+        <p>Loading...</p>
+    </LoadingTemplate>
 </TeamsApplication>
 
